# Edge_Test_wall

./: CMakeLists.txt  README.md  command.txt  package.xml
action/: MoveToPose.action
config/: ur5e_robotiq_2f85_controllers.yaml
config/robot01/: controllers.yaml  kinematics.yaml  picking_params.yaml  ur5e_robotiq_2f85_controllers.yaml
config/robot02/: controllers.yaml  kinematics.yaml  ur5e_robotiq_2f85_controllers.yaml
docs/: ur_robotiq_troubleshooting.md
launch/: ur_fake_moveit_robotiq.launch.py  ur_picking.launch.py  ur_sim_moveit_robotiq.launch.py
rviz/: robot_model_only.rviz
src/: goal_receive_node.cpp  gripper_bridge_node.cpp  joint_state_filter_node.cpp  robot_description_publisher_node.cpp  ur_picking_node.cpp
srdf/: ur_robotiq.srdf.xacro
urdf/: ur5e_robotiq_2f85.urdf.xacro  ur_to_robotiq_adapter.urdf.xacro
